--- a/ChangeLog.org
+++ b/ChangeLog.org
@@ -2,6 +2,18 @@
 #+author: Valery Kocubinsky
 #+language: en
 
+* Version 0.5.0
+
+- Update arithmetical functions documentation
+- Pointwise addition and multiplication
+- Add congruence documentation
+- use \varphi instead of \phi
+- user \varepsilon instead of \epsilon
+- use fancyvrb latex package for source block        
+- rename ar-func -> arithmetical-functions
+- rename congruence -> congruences
+- rename quadratic-residue -> quadratic-residues  
+
 * Version 0.4.0 <2024-03-26 Tue>
 
 - Switch from pandoc to Org Mode export
