--- a/readme.org
+++ b/readme.org
@@ -2,6 +2,10 @@
 #+author: Valery Kocubinsky
 #+startup: nolatexpreview content
 #+PROPERTY: header-args:clojure :session *clojure-1* :exports both :results pp
+#+LATEX_HEADER: \RequirePackage{fancyvrb}
+#+LATEX_HEADER: \DefineVerbatimEnvironment{verbatim}{Verbatim}{frame=single}
+
+
 
 * About
 
@@ -11,22 +15,60 @@ Here defined set of well known arithmetic functions and one can define
 custom arithmetic function. One can solve linear congruence or system
 of linear congruences including case when moduli relatively prime.
 
-I wrote this document =readme.org= with Emacs Org Mode. Then I
-generate markdown file =readme.md= with Org Mode export to markdown
-=C-c C-e m m=, and generate pdf file =readme.odf= with Org Mode export
-to pdf =C-c C-e l p=.  Github by default show =readme.md= if a project
-has such file.  Githib markdown looks enough good, even math equation
-is supported. But I see some issues with greek characters in table of
-content and in link text. If it is a problem =readme.pdf= looks
-better. I use Emacs babel for clojure to produce real output inside
-the document.
+I wrote this document with Emacs Org Mode. Then I generate markdown
+file [[./readme.md][readme.md]] with Org Mode export to markdown =C-c C-e m m=, and
+generate pdf file [[./readme.pdf][readme.pdf]] with Org Mode export to pdf =C-c C-e l
+p=.  Github by default show [[./readme.md][readme.md]] if a project has such file.
+Github markdown looks enough good, even math equation is
+supported. However for now math equation doesn't rendered for link
+text. I also generate [[./readme.pdf][readme.pdf]] , pdf file doesn't have any issues
+with math equations.
+
+I use Emacs babel for clojure to produce real output inside the
+document, so it is live documentation and one can open org file in
+Emacs. I use =org-latex-preview=, to preview math equation inside
+Emacs, to display all image for all fragments need to use prefix
+argument =C-u C-u C-c C-x C-l= for preview all math equations inside
+Emacs.
+
+Many application require integer factorization. Integer factorization
+is relatively expensive procedure. Most straightforward way to
+factorize integer $n$ is try to divide $n$ to numbers $2,3,4, \dots
+\sqrt{n}$.
+There is some optimization of this procedure. For instance
+exclude from candidates multiple of $2$, or multiple of $2$ and
+multiple of $3$. It is enough good strategy to factorize one
+number. But if need factorize many numbers more fast way to factorize
+number is precalculate table of first $N$ primes and try to divide
+number $n$ to primes $p_1,p_2, \dots, p_n \le \sqrt{n}$.  Table of
+first $N$ primes can be caclulated with Sieve of Eratosthenes. There
+is a way to improve performance of factorization. With slightly
+modified Sieve of Eratosthenes procedure we can precalculate least
+prime divisor table. This table keep least prime divisor for every
+integer up to $N$. This table works as linked list, in fact we know
+all divisors of any number up to $N$ and to factorize integer we need
+just iterate over "linked list" to build output data structure. But
+least prime divisor table require more memory compare to Sieve of
+Eratosthenes.  There is a way to improve performance, it is another
+modification of Sieve of Eratosthenes procedure to build full
+factorization for all numberS $1,2,\dots,N$.  It require much more
+memory for keep table of full factorization and it require more time
+for calculate full factorization table, compare to build least prime
+divisor table.
+
+The purpose of this library/tool is to provide fast way to play with
+relatively small numbers(millions) and I made a decision to use least
+prime divisor table as a best compromise between build table time,
+required memory for table, integer factorization time. So now
+factorization is cheap, but it require 4 bytes per number or 4MB
+for 1000000.
 
 In this document I load number theory packages as: 
 
 #+begin_src clojure :results silent
   (require '[vk.ntheory.basic :as b])
   (require '[vk.ntheory.primes :as p])
-  (require '[vk.ntheory.ar-func :as af])
+  (require '[vk.ntheory.arithmetic-functions :as af])
   (require '[vk.ntheory.congruence :as c])
   (require '[vk.ntheory.primitive-roots :as pr])
   (require '[clojure.math :as math])
@@ -78,6 +120,7 @@ Function ~divides?~ determine does one number divides another.
 
 #+RESULTS:
 : true
+: 
 
 ** Operations in $\mathbf{Z}/m\mathbf{Z}$
 
@@ -93,6 +136,7 @@ For instance $2 + 4 \equiv 1 \pmod{5}$ in $\mathbf{Z}/m\mathbf{Z}$
 
 #+RESULTS:
 : 1
+: 
 
 and $2 \cdot 4 \equiv 3 \pmod 5$ in $\mathbf{Z}/m\mathbf{Z}$
 
@@ -102,6 +146,7 @@ and $2 \cdot 4 \equiv 3 \pmod 5$ in $\mathbf{Z}/m\mathbf{Z}$
 
 #+RESULTS:
 : 3
+: 
 
 The fact that a modulo is a first argument allow bind modulo in let
 expression and then use addition and multiplication modulo m without
@@ -116,6 +161,7 @@ specify a modulo.
 
 #+RESULTS:
 : 4
+: 
 
 There is another helpful function modulo m - exponentiation. It is a
 fast binary exponentiation algorithm described in D.Knuth, The Art of
@@ -129,6 +175,7 @@ For instance, $101^{900} \equiv 701 \pmod{997}$
 
 #+RESULTS:
 : 701
+: 
 
 ** Power function
 
@@ -141,6 +188,7 @@ Clojure has built-in ~clojure.math/pow~ function, but it return
 
 #+RESULTS[8221a5c2608622294a90d9c99515dad20e5cf26b]:
 : 8
+: 
 
 ** Order function
 
@@ -153,6 +201,7 @@ $2^3 | 24$, but $2^4 \nmid 24$, so $ord_2(24) = 3$
 
 #+RESULTS[6688ec475e07b26cbe22365a0f8b042237d3472e]:
 : 3
+: 
 
 ** Sign function
 
@@ -311,10 +360,12 @@ value for index ~1~ is ~1~.
 ** Integer factorization
 
 Integer $p$ is a prime if
+
 - $p > 1$
 - has only divisors $1$ and $p$.  
 
-  
+There is ~prime?~ function:
+
 #+begin_src clojure
 (p/prime? 7)
 #+end_src
@@ -327,7 +378,8 @@ Integer $n$ is a composite number if
 - $n > 1$
 - has at least one proper divisor, i.e. divisor except $1$ and $p$ 
 
-  
+There is ~composite?~ function:
+
 #+begin_src clojure
   (p/composite? 12)
 #+end_src
@@ -484,44 +536,39 @@ more check functions:
 - ~check-prime~
 - ~check-odd-prime~      
 
-* Arithmetical functions ~vk.ntheory.ar-func~
+* Arithmetical functions ~vk.ntheory.arithmetic-functions~
 
 This section cover namespace ~vk.ntheory.primes~. It contains some
 well known arithmetical functions and also functions which allow build
 new arithmetical functions.
 
 #+begin_src clojure :results silent
-  (require '[vk.ntheory.ar-func :as af])
+  (require '[vk.ntheory.arithmetic-functions :as af])
 #+end_src
-
-
-** Divisors
-
-For get list of all divisors of number ~n~ there is ~divisor~
-function. List of divisors is unordered.
-
-#+begin_src clojure
-  (af/divisors 30)
-#+end_src
-
-#+RESULTS[eb92a166694fca9e52907ba5cc3800b132e83a1f]:
-: (1 2 3 6 5 10 15 30)
-: 
 
 ** Arithmetical function
 
 Arithmetical function is an any function which accept natural number
-and return complex number $f: \mathbf N \to \mathbf C$. The library mostly works
-with functions which also returns integer $f: \mathbf N \to \mathbf Z$.
+and return complex number $f: \mathbf N \to \mathbf C$. The library
+mostly works with functions which also returns integer $f: \mathbf N
+\to \mathbf Z$.
 
 ** Function equality
 
 Two arithmetical function $f$ and $g$ are equal if $f(n)=g(n)$ for all
-natual $n$. There is helper function ~f-equlas~ which compare two
-functions on some sequence of natual numbers. Function ~f=~
-accept two functions and optionally sequence of natural numbers. There
-is a default for sequence of natural numbers, it is a variable
+natual $n$. There is helper function ~f=~ which compare two functions
+on some sequence(sample) of natual numbers. Function ~f=~ accept two
+functions and optionally sequence of natural numbers. There is a
+default for sequence of natural numbers, it is a variable
 ~default-natural-sample~, which is currently ~range(1,100)~.
+
+#+begin_src clojure
+   (take 10 af/default-natural-sample)
+#+end_src
+
+#+RESULTS:
+: (1 2 3 4 5 6 7 8 9 10)
+: 
 
 If we like identify does two function ~f~ and ~g~ equals on some
 sequence of natural number we can for example do next:
@@ -531,10 +578,62 @@ sequence of natural number we can for example do next:
   (def f identity)
   (def g (constantly 1))
   ;; Then we able to check does those functions are equals
-  (f/f= f g)
-  (f/f= f g (range 1 1000))
-  (f/f= f g (filter even? (range 1 100)))
+  (af/f= f g) ;; true
+  (af/f= f g (range 1 1000)) ;; true
+  (af/f= f g (filter even? (range 1 100))) ;; true
 #+end_src
+
+** Pointwise addition
+
+For two functions $f$ an $g$ pointwise addition defined as follows:
+
+$$(f + g)(n) = f(n) + f(n)$$
+
+In clojure function ~f+~ returns pointwise addition:
+
+#+begin_src clojure
+      (let [f #(* % %)  
+            g #(* 2 %)] 
+       ((af/f+ f g) 3)) 
+#+end_src
+
+#+RESULTS:
+: class clojure.lang.Compiler$CompilerException
+
+** Pointwise multiplication
+
+For two functions $f$ an $g$ pointwise multiplication defined as
+follows:
+
+$$(f \cdot g)(n) = f(n) \cdot f(n)$$
+
+In clojure function ~f*~ returns pointwise multiplication:
+
+#+begin_src clojure
+      (let [f #(* % %)  
+            g #(* 2 %)] 
+       ((af/f* f g) 3)) 
+#+end_src
+
+#+RESULTS:
+: 54
+: 
+
+** Divisors
+
+Some arithmetic functions and Dirichlet convolutions need to iterate
+over positive divisors on an integer.  For get list of all positive
+divisors of number ~n~ there is ~divisor~ function. List of divisors
+is unordered.
+
+#+begin_src clojure
+  (af/divisors 30)
+#+end_src
+
+#+RESULTS[eb92a166694fca9e52907ba5cc3800b132e83a1f]:
+: (1 2 3 6 5 10 15 30)
+: 
+
 
 ** Additive functions
 
@@ -581,7 +680,7 @@ For instance, we can define function which calculate number of
 divisors of integer ~n~. If $n = p_1^{a_1} p_2^{a_2} \dots p_k^{a_k}$ count of divisors of
 number ~n~ can be calculated by formula:
 
-$$ \sigma_0(n) = \prod_{i=1}^{k} (a_i + 1) $$
+$$ d(n) = \prod_{i=1}^{k} (a_i + 1) $$
 
 With helper function it can be defined as
 
@@ -597,6 +696,7 @@ With helper function it can be defined as
 
 Of course there is predefined function ~divisors-count~, but it
 is an example how to define custom function.
+
 ** Some additive functions
 
 *** Count of distinct primes - $\omega$
@@ -628,10 +728,9 @@ $$\Omega = a_1 + a_2 + \dots + a_k$$
 : 
 
 ** Some multiplicative functions
-
 *** Mobius function - $\mu$.
 
-Mobius function defined as:
+Mobius function $\mu$ is defined as follows:
 
 
 $$ \mu(n) = \begin{cases}
@@ -650,15 +749,15 @@ For example, $\mu(6)=\mu(2 \cdot 3)=1$
 : 1
 : 
 
-*** Euler totient function - $\phi$
+*** Euler totient function - $\varphi$
 
-Euler totient function  is a count of numbers relative  prime to given
-number ~n~.  Totient function can be calculated by formula:
+Euler totient function $\varphi(n)$ is a number of positive integers not exceeding
+$n$ which are relatively prime to $n$. It can be calculated as follows:
 
+$$ \varphi(n) = \prod_{p|n} (p^a - p^{a-1}) $$
 
-$$ \phi(n) = \prod_{p|n} (p^a - p^{a-1}) $$
-
-For example, count of numbers relative prime to $6$ are $1$ and $5$, so $\phi(6) = 2$
+For example, count of numbers relative prime to $6$ are $1$ and $5$,
+so $\varphi(6) = 2$
 
 #+begin_src clojure
   (af/totient 6)
@@ -668,11 +767,11 @@ For example, count of numbers relative prime to $6$ are $1$ and $5$, so $\phi(6)
 : 2
 : 
 
-*** Unit function - $\epsilon$
+*** Unit function - $\varepsilon$
 
-Unit function defined as
+Unit or identity function defined as follows:
 
-$$ \epsilon(n) = \begin{cases}
+$$ \varepsilon(n) = \begin{cases}
 1,&  \text{if } n = 1 \\
 0,&  \text{if } n > 1
 \end{cases} $$
@@ -685,9 +784,14 @@ $$ \epsilon(n) = \begin{cases}
 : 0
 : 
 
-*** Constant one function - $1$
+The name ~unit~ was chosen to make it different from
+~clojure.core/identity~ function. 
 
-$$ 1(n) = 1 $$
+*** Constant one function - $\mathbf{1}$
+
+Constant one function $\mathbf{1}(n)$ defiened as follows:
+
+$$\mathbf{1}(n) = 1 $$
 
 #+begin_src clojure
   (af/one 6)
@@ -699,11 +803,14 @@ $$ 1(n) = 1 $$
 
 *** Divisors count - $\sigma_0$
 
-Divisors count is number of divisors which divides given number $n$.
+Function divisors count is a number of positive divisors which divides
+given number $n$.
 
 $$ \sigma_0(n) = \sum_{d|n} 1 $$
 
-For example, number $64$ has $4$ divisors, namely $1,2,3,6$, so $\sigma_0(6)=4$
+Function $\sigma_0(n)$ is often denoted as $d(n)$.  For example,
+number $6$ has $4$ divisors, namely $1,2,3,6$, so $d(6)=4$.
+
 
 #+begin_src clojure
   (af/divisors-count 6)
@@ -715,10 +822,13 @@ For example, number $64$ has $4$ divisors, namely $1,2,3,6$, so $\sigma_0(6)=4$
 
 *** Divisors sum - $\sigma_1$
 
+Function divisors sum is sum of positive divisors which divides given
+number $n$
 
 $$ \sigma_1(n) = \sum_{d | n} d $$
 
-For number 6 it is $12 = 1 + 2 + 3 + 6$
+Function $\sigma_1$ is often denoted as $\sigma$.
+For instance, $\sigma(6)= 1 + 2 + 3 + 6 = 12$
 
 #+begin_src clojure
   (af/divisors-sum 6)
@@ -730,9 +840,11 @@ For number 6 it is $12 = 1 + 2 + 3 + 6$
 
 *** Divisors square sum
 
+Function divisors square sum defined as follows:
+
 $$ \sigma_2(n) = \sum_{d | n} d^2 $$
 
-For number 6 it is $50 = 1^2 + 2^2 + 3^2 + 6^2$
+For instance, $\sigma_2(6) = 1^2 + 2^2 + 3^2 + 6^2 = 50$
 
 #+begin_src clojure
   (af/divisors-square-sum 6)
@@ -748,28 +860,30 @@ In general $\sigma_x$ function is a sum of x-th powers divisors of given n
 
 $$ \sigma_x(n) = \sum_{ d | n} d^x $$
 
-If $x \ne 0$ $\sigma_x$ can be calculated by formula:
+If $x \ne 0$, $\sigma_x$ can be calculated as follows:
 
-$$ \sigma_{x}(n) = \prod_{i=1}^{k} \frac {p_i^{(a_i+1)x}} {p_i^x - 1} $$
+$$ \sigma_{x}(n) = \prod_{i=1}^{k} \frac {p_i^{x(a_i+1)}} {p_i^x - 1} $$
 
-and if $x = 0$ by formula:
+and if $x = 0$ as follows:
 
 $$ \sigma_{0}(n) = \prod_{i=1}^{k} (a_i + 1) $$
 
 There is higher order function ~divisors-sum-x~ which
 accept ~x~ and return appropriate function.
 
+For example we can define divisors cube sum as follows:
+
 #+begin_src clojure :results silent
-  (def my-divisors-square-sum (af/divisors-sum-x 2))
+  (def my-divisors-cube-sum (af/divisors-sum-x 3))
 #+end_src
 
-*** Liouville - $\lambda$
+*** Liouville function - $\lambda$
 
-Liouville function can be defind by formula:
+Liouville function $\lambda$ defined as $\lambda(1) = 1$ and if $n = p_1^{a_1} p_2^{a_2} \dots p_k^{a_k}$
+$\lambda(n) = (-1)^{a_1 + a_2 + \dots + a_k}$ or with early defined $\Omega$ function
+we can write definition of $\lambda$ as follows:
 
-$$\lambda(n) = (-1)^{\Omega(n)}$$
-
-where [[*Total count of primes - $\Omega$][$\Omega$]] have been descibed above.
+$$\lambda(n) = (-1)^{\Omega}$$
 
 #+begin_src clojure
   (af/liouville (* 2 3)) 
@@ -779,12 +893,16 @@ where [[*Total count of primes - $\Omega$][$\Omega$]] have been descibed above.
 : 1
 : 
 
+Liouville function is completely multiplicative.
+
 ** Some other arithmetic functions
 
-*** Mangoldt - $\Lambda$
+*** Mangoldt function - $\Lambda$
+
+Mangoldt function $\Lambda$ defined as follows:
 
 $$\Lambda(n) = \begin{cases}
-   \log p,& \text{if $n$ is power of prime i.e. $n = p^k$} \\
+   \log p,& \text{if $n = p ^k$ for some prime $p$ and some $k \ge 1$} \\
    0,& \text{otherwise} 
 \end{cases}$$
 
@@ -798,37 +916,29 @@ For example $\Lambda(8) = \log 2$, $\Lambda(6) = 0$
 : 0.6931471805599453
 : 
   
-#+begin_src clojure
-  (af/mangoldt 6)
-#+end_src
+*** Chebyshev functions $\theta$ and $\psi$
 
-#+RESULTS[c45312e6447f258aca43ab10d232e6e8c943b095]:
-: 0
-: 
-
-**** Chebyshev functions $\theta$ and $\psi$
-
-There are two Chebyshev functions, one $\theta$ is defined as
+If $x > 0$ Chebyshev $\theta$ function is defined as follows:
 
 $$\theta(x) = \sum_{p \le x} \log p$$
 
-second $\psi$ defined as
-
-$$\psi = \sum_{n \le x} {\Lambda(n)} $$
-
-where [[*Mangoldt - $\Lambda$][$\Lambda$]] have been described above
-
 
 #+begin_src clojure
-  (af/chebyshev-first 2)
+  (af/chebyshev-theta 2)
 #+end_src
 
 #+RESULTS[cebd13d9e26c3ad5f4dffa6d9b3318e352ecaf8b]:
 : 0.6931471805599453
 : 
+
+If $x > 0$ Chebyshev $\psi$ function is defined as follows:
+
+$$\psi = \sum_{n \le x} {\Lambda(n)} $$
+
+
   
 #+begin_src clojure
-  (af/chebyshev-second 2)
+  (af/chebyshev-psi 2)
 #+end_src
 
 #+RESULTS[2a19f1e0aa91c0b965be5aee1939f687592600b2]:
@@ -852,59 +962,59 @@ $$ f * g = g * f $$
 
 Has identify
 
-$$ f * \epsilon = \epsilon * f = f $$
+$$ f * \varepsilon = \varepsilon * f = f $$
 
 For every $f$, which $f(1) \ne 0$ exists inverse function $f^{-1}$
-such that $f * f^{-1} = \epsilon$. This inverse function called
+such that $f * f^{-1} = \varepsilon$. This inverse function called
 Dirichlet inverse and can by calculated recursively by formula:
 
 $$ f^{-1}(n) = \begin{cases}
 \frac{1}{f(1)} & \quad \text{if } n = 1  \\
 \frac{-1}{f(1)}\sum_{ \substack{d | n\\
                                 d < n}} f(\frac{n}{d}) f^{-1}(d)
-               & \quad n \ge 1
+               & \quad \text{if } n > 1
 \end{cases} $$
 
 
-For example, $1(n) * 1(n) = \sigma_0$
+In clojure, function ~d*~ calculate Dirichlet convolution:
 
-#+begin_src clojure
-  (af/f=
-     (af/d* af/one af/one)
-     af/divisors-count
-  )
+#+begin_src clojure :results silent
+  (af/d* af/one af/one)
 #+end_src
 
-#+RESULTS[57087c9ba65232b20217853c2e785c62527b3666]:
-: true
-: 
+Function ~inverse~ calculate Dirichlet inverse:
 
-Dirichlet convolution is associative so clojure method support more than two
-function as parameter of ~f*~
+#+begin_src clojure :results silent
+  (af/inverse af/one)
+#+end_src
+
+Dirichlet convolution is associative so clojure function ~d*~ support
+more than two function as an argument.
 
 #+begin_src clojure
-  (af/f=
-    (af/d* af/mobius af/one af/mobius af/one)
-    af/unit
-  )
+  (af/d* af/mobius af/one af/mobius af/one)
 #+end_src
 
 #+RESULTS[13fd6000aaba4122437535d8be6a4d8841038ace]:
-: true
+: #function[vk.ntheory.ar-func/d*/fn--10570]
 : 
 
-Another example, functions $\mu(n)$ and $1(n)$ are inverse of each other
+
+Functions $\mu(n)$ and $1(n)$ are inverse of each other, we can easy check
+this
 
 #+begin_src clojure
-  (f/f= (f/d-inv f/one) f/mobius)
+  (af/f= (af/inverse af/one) af/mobius)
 #+end_src
 
 #+RESULTS[33bbf9139c179db71af6a5d185b937afad79f0f6]:
 : true
 : 
-  
+
+and conversely
+
 #+begin_src clojure
-  (af/f= (af/d-inv af/mobius) af/one)
+  (af/f= (af/inverse af/mobius) af/one)
 #+end_src
 
 #+RESULTS[e17afcfeaabbc9d50d6f000814f6e2e43b7f447e]:
@@ -912,15 +1022,15 @@ Another example, functions $\mu(n)$ and $1(n)$ are inverse of each other
 : 
 
 
-Function ~d-inv~ defined as recursive function, it may
-execute slow. But inverse of completely multiplicative function $f(n)$
-is $f(n) \mu(n)$(usual multiplication), for instance inverse
-of identity function, let's denote it $N(n)$ is $N(n) \mu(n)$
+Function ~inverse~ defined as recursive function, it may execute
+slow. But inverse of completely multiplicative function $f(n)$ is
+$f(n) \cdot \mu(n)$(usual multiplication), for instance inverse of
+identity function, let's denote it as $N(n)$, is $N(n) \cdot \mu(n)$
 
 #+begin_src clojure
   (af/f=
-   (af/d-* 
-      #(* (identity %) (af/mobius %))
+   (af/d* 
+      (af/f* identity af/mobius)
       identity
    )
    af/unit)
@@ -930,11 +1040,12 @@ of identity function, let's denote it $N(n)$ is $N(n) \mu(n)$
 : true
 : 
 
-
 * Conguences ~vk.ntheory.congruence~
 
-This section cover namespaces ~vk.ntheory.congruence~. It contains functions
-for solve linear congruence and system of linear congruences.
+This section cover namespaces ~vk.ntheory.congruence~. It contains
+functions for solve any congruence with brute force approach and also
+contains solutions for specific congruences such as linear congruence
+and system of linear congruences.
 
 #+begin_src clojure :results silent
   (require '[vk.ntheory.congruence :as c])
@@ -942,19 +1053,137 @@ for solve linear congruence and system of linear congruences.
 
 In progress ...
 
+** Brute force solution
+
+If we have a congruence
+
+$$
+f(x) \equiv 0 \pmod{m}
+$$
+
+we can solve it by try all $m$ residue classes modulo $m$.There is
+~solve~ function for this. It accept two aruments, first argument is a
+some function of one argument and second arument is a modulo. Let's
+for example solve congruence $x^2 \equiv 1 \pmod{8}$
+
+#+begin_src clojure
+  (let [f (fn [x] (dec (* x x)))]
+    (c/solve f 8)
+    )
+#+end_src
+
+#+RESULTS:
+: (1 3 5 7)
+: 
+
+** Linear congruence
+
+Let consider linear congruence
+
+$$
+ax \equiv b \pmod{m}
+$$
+
+There is function ~solve-linear~ for solve linear congruence. It accepts
+3 arguments ~a~, ~b~ and ~m~. Let's solve congruence $6x \equiv 3 \pmod{15}$
+
+#+begin_src clojure
+  (c/solve-linear 6 3 15)
+#+end_src
+
+#+RESULTS:
+: #{3 8 13}
+: 
+
+** System of linear congruences
+
+Let consider system of linear congruences:
+
+$$\begin{align*}
+x & \equiv c_1 \pmod{m_1} \\
+x & \equiv c_2 \pmod{m_2} \\
+  & \vdots \\
+x & \equiv c_n \pmod{m_n} \\
+\end{align*}
+$$
+
+There is a function ~solve-remaindes~ for solve such system. It accepts
+a sequence of pairs $([c_1, m_1],[c_2, m_2],\dots,[c_n, m_n ])$ and returns pair
+$[r,M]$, where $M$ is the least common multiple of $m_1,m_2,\dots,m_n$, and
+$r$ is residue to modulo $M$. 
+
+Let's solve system:
+
+$$\begin{align*}
+x &\equiv 2  \pmod{7} \\
+x &\equiv 5  \pmod{9} \\
+x &\equiv 11 \pmod{15} \\
+\end{align*}
+$$
+
+#+begin_src clojure
+  (c/solve-remainders [[2 7][5 9][11 15]])
+#+end_src
+
+#+RESULTS:
+: [86 315]
+: 
+
+So the answer is $86\pmod{315}$
+
+** Coprime moduli case
+
+When we have system of linear conguences:
+
+$$\begin{align*}
+x & \equiv c_1 \pmod{m_1} \\
+x & \equiv c_2 \pmod{m_2} \\
+  & \vdots \\
+x & \equiv c_n \pmod{m_n} \\
+\end{align*}
+$$
+
+and any pair of moduli relatively prime, i.e. $(m_i, m_j) = 1$ if $i
+\ne j$, the the system has one solution modulo the product $m_1 m_2
+\dots m_n$. This statement called Chinese Remainder Theorem. We can
+solve such system with ~solve-remainder~ function, but there is
+another function ~solve-coprime-remainders~. It accepts a sequence of
+pairs $([c_1, m_1],[c_2, m_2],\dots,[c_n, m_n ])$ and returns pair
+$[r,M]$, where $M$ is the product $m_1 m_2 \dots m_n$, and $r$ is
+residue to modulo $M$.
+
+Let's solve system:
+
+$$\begin{align*}
+x &\equiv 6 \pmod{17} \\
+x &\equiv 4 \pmod{11} \\
+x &\equiv -3 \pmod{8} \\
+\end{align*}
+$$
+
+#+begin_src clojure
+  (c/solve-remainders [[6 17][4 11][-3 8]])
+#+end_src
+
+#+RESULTS:
+: [125 1496]
+: 
+
+So the answer is $125\pmod{1496}$
+
 * Primitive Roots ~vk.ntheory.primitive-roots~
 
 #+begin_src clojure :results silent
-  (require '[vk.ntheory.primitive-root :as pr])
+  (require '[vk.ntheory.primitive-roots :as pr])
 #+end_src
 
 
 In progress...
 
-* Quadratic residies ~vk.ntheory.quadratic-residue
+* Quadratic residies ~vk.ntheory.quadratic-residues
 
 #+begin_src clojure :results silent
-  (require '[vk.ntheory.quadratic-residue :as qr])
+  (require '[vk.ntheory.quadratic-residues :as qr])
 #+end_src
 
 
