--- a/ChangeLog.org
+++ b/ChangeLog.org
@@ -6,10 +6,12 @@
 
 - basic namespace
   - check-relatively-prime
-- primitve roots
+  - product  
+- primitive roots
   - reduced residues
   - find primitive root
-  - primitve root?    
+  - find all primitive roots
+  - check for primitive root
 
 * Version 0.5.0
 
