--- a/readme.org
+++ b/readme.org
@@ -127,7 +127,15 @@ Function ~divides?~ determine does one number divides another.
 
 ** Combinatorics
 
+~product~ functions returns cartesian product of n sequences:
 
+#+begin_src clojure
+  (b/product [(range 1 3) (range 1 5)]) 
+#+end_src
+
+#+RESULTS:
+: ((1 1) (1 2) (1 3) (1 4) (2 1) (2 2) (2 3) (2 4))
+: 
 
 ** Operations in $\mathbf{Z}/m\mathbf{Z}$
 
