--- a/ChangeLog.org
+++ b/ChangeLog.org
@@ -2,6 +2,17 @@
 #+author: Valery Kocubinsky
 #+language: en
 
+* Version 0.6.0
+
+- basic namespace
+  - check-relatively-prime
+  - product  
+- primitive roots
+  - reduced residues
+  - find primitive root
+  - find all primitive roots
+  - check for primitive root
+
 * Version 0.5.0
 
 - Update arithmetical functions documentation
