--- a/readme.org
+++ b/readme.org
@@ -1228,6 +1228,11 @@ If order $a$ modulo $m$ is equal to $\phi(m)$, $a$ called
 primitive root. Primitive roots exists only for moduli
 $1$,$2$,$4$, $p^a$, $2p^a$. To find any primitive root
 
+$1$,$2$,$4$, $p^a$, $2p^a$. To find any primitive root
+\(1),\(2),\(4), \(p^a), \(2p^a). To find any primitive root
+
+
+
 #+begin_src clojure
   (pr/find-primitive-root 11)
 #+end_src
